# starccato_lvk

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  pyproject.toml  run_bwcomp_local.sh  testing.ipynb
.github/workflows/: pypi.yml
data_acquisiton/: README.md  download_glitch_data.py
docs/: bayeswave_baseline.md
docs/notebooks/: lvk_data_fetch.ipynb
docs/simulation_study/: README.md
out_ff/: ff_summary.json  joined.json
out_morphz_val/: morphz_validation.json
out_morphz_val/trial_19/morphZ_toy/: bw_silverman_1D.json
out_pp/: pp_summary.json
out_rn_figs/: paired_network_audit.json  summary_table.tex
slurm/: README.md  baseline.sh  bayeswave_comparison.sh  bayeswave_pilot.sh  bayeswave_prep.sh  paired_detector_control.sh  pp_test.sh  prep.sh  real_noise.sh  refit_suspect.sh  run.sh  submit_campaign.sh  submit_nuts_morphlnz.sh
slurm/configs/: analysis.yaml
src/starccato_lvk/: __init__.py  arviz_utils.py  bayeswave.py  cli.py  constants.py  data.py  detector.py  jax_utils.py  likelihood.py  lvk_data_prep.py  main.py  polarisation.py  prior.py  sampler.py  waveform.py
src/starccato_lvk/acquisition/: README.md  __init__.py  config.py  generate_trigger_csv.py  lvk_fetch.py  main.py  valid_segment_catalog.py
src/starccato_lvk/acquisition/io/: __init__.py  determine_valid_segments.py  event_catalog.py  glitch_catalog.py  only_noise_data.py  plotting.py  strain_loader.py  utils.py
src/starccato_lvk/analysis/: __init__.py  arviz_utils.py  evidence.py  jim_likelihood.py  jim_waveform.py  likelihood.py  lvk_data_prep.py  main.py  multidet_data_prep.py  noise_evidence.py
src/starccato_lvk/analysis/post_proc/: __init__.py  jim_plots.py  plot_diagnostics.py  plot_posterior_predictive.py  prior_diagnostics.py
src/starccato_lvk/data_acquisition/: README.md  config.py  main.py
src/starccato_lvk/jimgw/: README.md
src/starccato_lvk/post_proc/: __init__.py  plot_diagnostics.py  plot_posterior_predictive.py
src/starccato_lvk/workflows/: __init__.py  run_event.py
studies/: README.md  bench_sky_sampling.py  bilby_sim.py  chisq_baseline.py  collect_results.py  compare_bayeswave_campaign.py  data_prep.py  fitting_factor.py  morphz_validation.py  morphz_vs_nested_campaign.py  mwe.py  noise_scale_marginal.py  paired_detector_control.py  paired_network_audit.py  paper_figures_v041.py  plot_hypothesis_posterior_comparison.py  plot_multimodality_diagnostic.py  plot_waveform_reconstruction.py  pp_predictive_fig.py  pp_test.py  psd_plot.py  real_data_roc.py  real_data_smoke_test.py  real_noise_aggregate.py  real_noise_event.py  real_noise_io.py  real_noise_plots.py  real_noise_study.py  refit_suspect_signal_fits.py  sampler.py  simulated_design_psd.py  simulation_study.py  snr_vs_odds_roc.py  snr_vs_odds_roc_coherent.py  testing_lnl.py  v2.py
tests/: conftest.py  test_acquisition.py  test_analysis.py  test_bayeswave.py  test_cli.py  test_cli.sh  test_data_acquisition.py  test_evidence.py  test_jim_likelihood.py  test_likelihood.py  test_post_proc.py  test_real_noise_campaign.py  test_sampler.py
(+23 files in other folders)
